hid chatGPT api key

--- a/docker-images/docker-compose-milvus.yml
+++ b/docker-images/docker-compose-milvus.yml
@@ -33,7 +33,7 @@ services:
 
   standalone:
     container_name: milvus-standalone
-      #    image: milvusdb/milvus:v2.3.0-beta
+      #    image: milvusdb/milvusr:latest
     image: milvusdb/milvus
     command: ["milvus", "run", "standalone"]
     environment:
